# renderer

./: .gitignore  CMakeLists.txt  Makefile  image2d.cpp  main  main.cpp  run  shader.h
include/: renderer.h  renderer_util.h  timer.h
include/renderer/: renderer_util.h
include/renderer/shaders/: image2d.h  image2d.shader
include/shaders/: image2d.h
src/: Renderer.cpp  index_buffer.cpp  renderer.cpp  renderer_util.cpp  shader.cpp  texture.cpp  vertex_array.cpp  vertex_buffer.cpp  vertex_buffer_layout.cpp
src/renderer/: index_buffer.cpp  renderer.cpp  renderer_util.cpp  shader.cpp  texture.cpp  vertex_array.cpp  vertex_buffer.cpp
